--- a/SSHmealDesigner.ui
+++ b/SSHmealDesigner.ui
@@ -47,7 +47,7 @@ color:rgba(0, 51, 102, 1)</string>
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>310</y>
+      <y>300</y>
       <width>321</width>
       <height>131</height>
      </rect>
@@ -71,7 +71,7 @@ color:rgba(0, 51, 102, 1)</string>
     <property name="styleSheet">
      <string notr="true">border-radius:20px;
 border-color:rgba(255, 215, 0, 1);
-background-color:rgba(0, 51, 102, 1);
+background-color:rgba(0, 102, 204, 1);
 font: 75 24pt &quot;Verdana&quot;;
 color: rgb(255,255,255);
 alternate-background-color: rgba(0, 102, 102, 1);</string>
@@ -108,13 +108,14 @@ alternate-background-color: rgba(0, 102, 102, 1);</string>
     <property name="styleSheet">
      <string notr="true">border-radius:20px;
 border-color:rgba(255, 215, 0, 1);
-background-color:rgba(0, 51, 102, 1);
+background-color:rgba(0, 102, 204, 1);
 font: 75 24pt &quot;Verdana&quot;;
 color: rgb(255,255,255);
 alternate-background-color: rgba(0, 102, 102, 1);</string>
     </property>
     <property name="text">
-     <string>Recipe Suggestions</string>
+     <string>Recipe
+Suggestions</string>
     </property>
    </widget>
   </widget>
