--- a/SSHmealDesigner.ui
+++ b/SSHmealDesigner.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
-    <height>800</height>
+    <width>599</width>
+    <height>776</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,8 +18,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1200</width>
-     <height>800</height>
+     <width>600</width>
+     <height>780</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -29,8 +29,8 @@ background-color:qlineargradient(spread:pad, x1:0.091, y1:0.101636, x2:0.991379,
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>130</y>
+      <x>110</x>
+      <y>70</y>
       <width>361</width>
       <height>101</height>
      </rect>
@@ -46,10 +46,10 @@ color:rgba(0, 51, 102, 1)</string>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>300</y>
-      <width>321</width>
-      <height>131</height>
+      <x>140</x>
+      <y>280</y>
+      <width>291</width>
+      <height>111</height>
      </rect>
     </property>
     <property name="font">
@@ -69,7 +69,7 @@ color:rgba(0, 51, 102, 1)</string>
      <bool>false</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-radius:20px;
+     <string notr="true">border-radius:50px;
 border-color:rgba(255, 215, 0, 1);
 background-color:rgba(0, 102, 204, 1);
 font: 75 24pt &quot;Verdana&quot;;
@@ -83,10 +83,10 @@ alternate-background-color: rgba(0, 102, 102, 1);</string>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>490</y>
-      <width>321</width>
-      <height>131</height>
+      <x>140</x>
+      <y>480</y>
+      <width>291</width>
+      <height>111</height>
      </rect>
     </property>
     <property name="font">
@@ -106,7 +106,7 @@ alternate-background-color: rgba(0, 102, 102, 1);</string>
      <bool>false</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-radius:20px;
+     <string notr="true">border-radius:50px;
 border-color:rgba(255, 215, 0, 1);
 background-color:rgba(0, 102, 204, 1);
 font: 75 24pt &quot;Verdana&quot;;
@@ -117,6 +117,112 @@ alternate-background-color: rgba(0, 102, 102, 1);</string>
      <string>Recipe
 Suggestions</string>
     </property>
+   </widget>
+   <widget class="QWidget" name="widget_2" native="true">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>600</width>
+      <height>780</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QWidget#widget{
+background-color:qlineargradient(spread:pad, x1:0.091, y1:0.101636, x2:0.991379, y2:0.977, stop:0 rgba(128, 194, 255, 255), stop:1 rgba(255, 255, 255, 255))}</string>
+    </property>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>70</y>
+       <width>361</width>
+       <height>101</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 75 48pt &quot;Georgia&quot;;
+color:rgba(0, 51, 102, 1)</string>
+     </property>
+     <property name="text">
+      <string>SSH MEALS</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_3">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>280</y>
+       <width>291</width>
+       <height>111</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Verdana</family>
+       <pointsize>24</pointsize>
+       <weight>9</weight>
+       <italic>false</italic>
+       <bold>false</bold>
+       <strikeout>false</strikeout>
+      </font>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-radius:50px;
+border-color:rgba(255, 215, 0, 1);
+background-color:rgba(0, 102, 204, 1);
+font: 75 24pt &quot;Verdana&quot;;
+color: rgb(255,255,255);
+alternate-background-color: rgba(0, 102, 102, 1);</string>
+     </property>
+     <property name="text">
+      <string>Ingredients</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_4">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>480</y>
+       <width>291</width>
+       <height>111</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Verdana</family>
+       <pointsize>24</pointsize>
+       <weight>9</weight>
+       <italic>false</italic>
+       <bold>false</bold>
+       <strikeout>false</strikeout>
+      </font>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-radius:50px;
+border-color:rgba(255, 215, 0, 1);
+background-color:rgba(0, 102, 204, 1);
+font: 75 24pt &quot;Verdana&quot;;
+color: rgb(255,255,255);
+alternate-background-color: rgba(0, 102, 102, 1);</string>
+     </property>
+     <property name="text">
+      <string>Recipe
+Suggestions</string>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
