--- a/SSHmealDesigner.ui
+++ b/SSHmealDesigner.ui
@@ -26,23 +26,6 @@
     <string notr="true">QWidget#widget{
 background-color:qlineargradient(spread:pad, x1:0.091, y1:0.101636, x2:0.991379, y2:0.977, stop:0 rgba(128, 194, 255, 255), stop:1 rgba(255, 255, 255, 255))}</string>
    </property>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>70</y>
-      <width>361</width>
-      <height>101</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 75 48pt &quot;Georgia&quot;;
-color:rgba(0, 51, 102, 1)</string>
-    </property>
-    <property name="text">
-     <string>SSH MEALS</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
@@ -118,7 +101,7 @@ alternate-background-color: rgba(0, 102, 102, 1);</string>
 Suggestions</string>
     </property>
    </widget>
-   <widget class="QWidget" name="widget_2" native="true">
+   <widget class="QWidget" name="colourWidget" native="true">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -131,12 +114,12 @@ Suggestions</string>
      <string notr="true">QWidget#widget{
 background-color:qlineargradient(spread:pad, x1:0.091, y1:0.101636, x2:0.991379, y2:0.977, stop:0 rgba(128, 194, 255, 255), stop:1 rgba(255, 255, 255, 255))}</string>
     </property>
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="lblSSHmeals">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>70</y>
-       <width>361</width>
+       <x>60</x>
+       <y>90</y>
+       <width>461</width>
        <height>101</height>
       </rect>
      </property>
@@ -148,7 +131,7 @@ color:rgba(0, 51, 102, 1)</string>
       <string>SSH MEALS</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_3">
+    <widget class="QPushButton" name="ingredientsButton">
      <property name="geometry">
       <rect>
        <x>140</x>
@@ -185,7 +168,7 @@ alternate-background-color: rgba(0, 102, 102, 1);</string>
       <string>Ingredients</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_4">
+    <widget class="QPushButton" name="recipeButton">
      <property name="geometry">
       <rect>
        <x>140</x>
